--- a/equipo-masculino.html
+++ b/equipo-masculino.html
@@ -9,6 +9,7 @@
     <link rel="canonical" href="https://seeergiio.github.io/index.html">
     <meta name="copyright" content="Sergio Ramos">
     <link rel="stylesheet" href="css/sytle.css">
+    <link rel="stylesheet" href="css/stylequinasculino.css">
     <title>Atletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,17 +27,54 @@
             <header>
                 <nav class="navegacion">
                     <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="historia/historia.html" title="Ir al apartador de historia">Historia</a>
-                    <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
-                    <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
-                    <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
+                    <a href="historia/historia.html" title="Ir al apartado de historia">Historia</a>
+                    <a href="equipo-masculino.html" title="Ir al apartado del equipo masculino">Equipo Masculino</a>
+                    <a href="equipo-femenino.html" title="Ir al apartado del equipo femenino">Equipo Femenino</a>
+                    <a href="academia.html" title="Ir al apartado de la academia">Academia</a>
                 </nav>
-                <h2 class="title-pag">PROXIMAMENTE</h2>
+                <h1 class="title-pag">EQUIPO MASCULINO</h1>
         </div>
         </header>
         <main>
             <section>
                 <article>
+                    <h2>PORTEROS</h2>
+                    <div>
+                        <img src="imagenes/DORSALES_WEB_1_MUSSO copia.jpg" alt="Dorsal de color rojo con el nombre 'J. Musso' y el número 1 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_13_OBLAK.jpg" alt="Dorsal de color rojo con el nombre 'Oblack' y el número 13 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                    </div>
+                    <h2>DEFENSAS</h2>
+                    <div>
+                        <img src="imagenes/DORSALES_WEB_2_JMGIMENEZ.jpg" alt="Dorsal de color rojo con el nombre 'J. M. Giménez y el número 2 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_3_AZPILICUETA.jpg" alt="Dorsal de color rojo con el nombre 'Azpilicueta' y el número 3 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_15_LENGLET.jpg" alt="Dorsal de color rojo con el nombre 'Lenglet' y el número 15 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_16_MOLINA.jpg" alt="Dorsal de color rojo con el nombre 'Molina' y el número 16 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_20_WITSEL.jpg" alt="Dorsal de color rojo con el nombre 'Witsel' y el número 20 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_21_GALAN.jpg" alt="Dorsal de color rojo con el nombre 'Javi Galán' y el número 21 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_23_REINILDO.jpg" alt="Dorsal de color rojo con el nombre 'Reinildo' y el número 23 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_24_LENORMAND.jpg" alt="Dorsal de color rojo con el nombre 'Le Normand' y el número 24 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                    </div>
+                    <h2>MEDIOCENTROS</h2>
+                    <div>
+                        <img src="imagenes/DORSALES_WEB_4_GALLAGHER.jpg" alt="Dorsal de color rojo con el nombre 'Gallagher' y el número 4 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_5_RDEPAUL.jpg" alt="Dorsal de color rojo con el nombre 'R. De Paul' y el número 5 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_6_KOKE.jpg" alt="Dorsal de color rojo con el nombre 'Koke' y el número 6 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_8_BARRIOS.jpg" alt="Dorsal de color rojo con el nombre 'Barrios' y el número 8 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_11_LEMAR.jpg" alt="Dorsal de color rojo con el nombre 'Lemar' y el número 11 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_12_SLINO.jpg" alt="Dorsal de color rojo con el nombre 'S. Lino' y el número 12 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_14_MLLORENTE.jpg" alt="Dorsal de color rojo con el nombre 'M. Llorente' y el número 14 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_17_RIQUELME.jpg" alt="Dorsal de color rojo con el nombre 'Riquelme' y el número 17 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_22_GIULIANO.jpg" alt="Dorsal de color rojo con el nombre 'Giuliano' y el número 22 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+
+                    </div>
+                    <h2>DELANTEROS</h2>
+                    <div>
+                        <img src="imagenes/DORSALES_WEB_7_GRIEZMANN.jpg" alt="Dorsal de color rojo con el nombre 'Griezmann' y el número 7 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_9_SORLOTH.jpg" alt="Dorsal de color rojo con el nombre 'Sorloth' y el número 9 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_10_CORREA.jpg" alt="Dorsal de color rojo con el nombre 'Correa' y el número 10 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+                        <img src="imagenes/DORSALES_WEB_19_JALVAREZ.jpg" alt="Dorsal de color rojo con el nombre 'J. Alvarez' y el número 19 en blanco, sobre un borde inferior con patrón ondulado azul y blanco.">
+
+                    </div>
                 </article>
             </section>  
             
@@ -45,30 +83,30 @@
         <footer>
             <h2>Coraje y Corazón</h2>
             <div class="footer-icons">
-                <a href="https://x.com/Atleti" title="Ir al Twitter oficial del Atlético de Madrid"><i class="fa fa-twitter"></a></i>
-                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir al Facebbok oficial del Atlético de Madrid"><i class="fa fa-facebook"></a></i>
-                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram oficial del Atlético de Madrid"><i class="fa fa-instagram"></i></a></i>
-                <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube oficial del Atlético de Madrid"><i class="fa fa-youtube-play"></a></i>
+                <a href="https://x.com/Atleti" aria-label="Twitter Oficial del Atlético de Madrid" title="Ir al Twitter oficial del Atlético de Madrid"><i class="fa fa-twitter"></a></i>
+                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" aria-label="Facebbok Oficial del Atlético de Madrid" title="Ir al Facebbok oficial del Atlético de Madrid"><i class="fa fa-facebook"></a></i>
+                <a href="https://www.instagram.com/atleticodemadrid/" aria-label="Instagram Oficial del Atlético de Madrid" title="Ir al Instagram oficial del Atlético de Madrid"><i class="fa fa-instagram"></i></a></i>
+                <a href="https://www.youtube.com/@atleticodemadrid" aria-label="YouTube Oficial del Atlético de Madrid" title="Ir al canal de Youtube oficial del Atlético de Madrid"><i class="fa fa-youtube-play"></a></i>
             </div>
             <div class="footer-text">
                 <p><b>Contacto</b></p>
                 <div class="footer-text-icons">
-                        <i class="fa fa-map-marker"></i>
-                        <p>Avenida Luis Aragonés, 4 28022 Madrid</p>
+                    <svg aria-label="Logo de ubicacion" xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><path fill="#fd6a6a" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                    <p>Avenida Luis Aragonés, 4 28022 Madrid</p>
                 </div>
                 <div class="footer-text-icons">
-                        <i class="fa fa-phone" aria-hidden="true"></i>                
-                        <p>91 726 04 03</p>
+                    <svg aria-label="Logo de Telefono" xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><path fill="#fd6a6a" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>                        
+                    <p>91 726 04 03</p>
                 </div>
                 <div class="footer-text-icons">
-                        <i class="fa fa-envelope"></i>
-                        <p>socios@atleticodemadrid.com</p>
+                    <svg aria-label="Logo de correo"  xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><path fill="#fd6a6a" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+                    <p>socios@atleticodemadrid.com</p>
                 </div>
                 <div class="footer-text-icons">
-                    <i class="fa fa-paperclip"></i>
-                    <a href="index.html" title="Ir a la de inicio"><p>Pagina de inicio</p></a>
-            </div>
-
+                    <svg aria-label="Logo de enlaces" xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><path fill="#fd6a6a" d="M364.2 83.8c-24.4-24.4-64-24.4-88.4 0l-184 184c-42.1 42.1-42.1 110.3 0 152.4s110.3 42.1 152.4 0l152-152c10.9-10.9 28.7-10.9 39.6 0s10.9 28.7 0 39.6l-152 152c-64 64-167.6 64-231.6 0s-64-167.6 0-231.6l184-184c46.3-46.3 121.3-46.3 167.6 0s46.3 121.3 0 167.6l-176 176c-28.6 28.6-75 28.6-103.6 0s-28.6-75 0-103.6l144-144c10.9-10.9 28.7-10.9 39.6 0s10.9 28.7 0 39.6l-144 144c-6.7 6.7-6.7 17.7 0 24.4s17.7 6.7 24.4 0l176-176c24.4-24.4 24.4-64 0-88.4z"/></svg>
+                    <a href="enlaces.html" title="Ir a la pagina de enlaces">
+                    <p>Pagina de enlaces</p></a>
+                </div>
             </div>
             &copy; Sergio Ramos Cordero 2024
         </footer>
